--- a/style03_newspaper.css
+++ b/style03_newspaper.css
@@ -41,7 +41,7 @@
 /* ================ BODY ================ */
 body {
   // background-color: #e9e4e1;
-  background-color: #fff;
+  background-color: ##f1f1ef;
   font-family: /* "Newsreader", */ Times New Roman, serif;
   font-optical-sizing: auto;
   font-weight: 200; 
@@ -53,6 +53,7 @@ body {
   margin-right: 20%;
   padding: 30px;
   // background-color: #f1f1ef;
+  background-color: #fff;
   /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
   position: relative;
 }
