--- a/style_base.css
+++ b/style_base.css
@@ -34,7 +34,7 @@ body {
 
 .main {
   //padding-top: 60px;
-  background: none;
+  //background: none;
 
 }
 
@@ -51,6 +51,33 @@ body {
   padding-bottom: 10px;
   //margin-bottom: -50px;
 }
+
+.center-aligned {
+  text-align: center;
+}
+
+/* Graphic Version */
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 45%;
+  padding: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
+
 
 /* ================ BUTTONS ================ */
 .button {
