--- a/style_base.css
+++ b/style_base.css
@@ -41,15 +41,16 @@ body {
 .content-box {
   margin-left: 20%;
   margin-right: 20%;
-  /*margin-top: 20px;*/
+  margin-top: -90px;
   padding: 30px;
-  /*padding-top: 15px;*/
+  padding-top: 15px;
   // overflow: hidden;
 }
 
 .footer {
   padding-bottom: 10px;
   //margin-bottom: -50px;
+  //margin-bottom: 20px;
 }
 
 .center-aligned {
@@ -222,7 +223,3 @@ th {
 .waves-container {
   display: none;
 }
-
-
-
-
